add animated character